--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,9 @@ body{
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	-webkit-box-shadow: inset hoff voff blur color;
 		box-shadow: inset hoff voff blur color;	
-		font-weight: 14px;
+		font-size: 14px;
+}
+h1{ 
+
+	font-weight: 20px;
 }
